# polymarkt-monitoring

./: .env.example  README.md  pyproject.toml
docs/: monitoring-strategy-system-design.md  requirements.md  vibe-coding-development-plan.md
src/polymarkt_monitoring/: __init__.py  config.py  main.py  models.py  retry.py
src/polymarkt_monitoring/clients/: __init__.py  explorer.py  notifier.py  pricing.py  rpc.py
src/polymarkt_monitoring/services/: __init__.py  evaluator.py  monitor.py
tests/: test_config.py  test_evaluator.py  test_monitor.py
